made cool config

--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -1,13 +1,14 @@
+monitor = ,preferred,auto,2
 source = ~/.config/material-you/colors.conf
 
 # BACKGROUND
 background {
-    monitor =
+    monitor = 
     path = screenshot
     blur_size = 4
     blur_passes = 3 # 0 disables blurring
     noise = 0.0117
-    contrast = 1.3000 # Vibrant!!!
+    contrast = 1.8000 # Vibrant!!!
     brightness = 0.8000
     vibrancy = 0.2100
     vibrancy_darkness = 0.0
@@ -16,6 +17,7 @@ background {
 
 # GENERAL
 general {
+    monitor = ,preferred,auto,2
     no_fade_in = false
     grace = 0
     disable_loading_bar = false
@@ -24,19 +26,19 @@ general {
 # INPUT FIELD
 input-field {
     monitor =
-    size = 190, 50
+    size = 400, 50
     outline_thickness = 2
-    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
+    dots_size = 0.5 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
     inner_color = rgba(0, 0, 0, 0.0)
     outer_color =  rgba(255, 255, 255, .0)
     font_color = $dark_primary
     fade_on_empty = false
-     font_family = SF Pro Display Bold
- placeholder_text = <i><span foreground="##ffffff99"></span></i>
+    font_family = SF Pro Display Bold
+    placeholder_text = <i><span foreground="##ffffff99"></span></i>
     hide_input = false
-    position = 0, -170
+    position = 0, -340
     halign = center
     valign = center
 }
@@ -44,13 +46,13 @@ input-field {
 # Hour-Time
 label {
     monitor =
-    text = cmd[update:1000] echo -e "$(date +"%I")"
-    color =  $light_primary
-      shadow_passes = 3
+    text = cmd[update:1000] echo "$(date +"%I")"
+    color =  $dark_primary
+    shadow_passes = 3
     shadow_size = 2
-    font_size = 100
+    font_size = 200
     font_family = AlfaSlabOne 
-    position = 0, 100
+    position = 0, 200
     halign = center
     valign = center
 }
@@ -58,13 +60,13 @@ label {
 # Minute-Time
 label {
     monitor =
-    text = cmd[update:1000] echo -e "$(date +"%M")"
+    text = cmd[update:1000] echo "$(date +"%M")"
     color = $dark_primary
-    font_size = 100
+    font_size = 200
     font_family = AlfaSlabOne
       shadow_passes = 3
     shadow_size = 2
-    position = 0, -20
+    position = 0, -40
     halign = center
     valign = center
 }
@@ -72,30 +74,30 @@ label {
 # Day-Date-Month
 label {
     monitor =
-    text = cmd[update:1000] echo -e "$(date +"%d %b %A")"
-    color = $dark_primary
+    text = cmd[update:1000] echo "$(date +"%d %b %A")"
+    color = $light_primary
        shadow_passes = 3
     shadow_size = 1
-    font_size = 12
+    font_size = 48
     font_family = JetBrains Mono Nerd Font Mono ExtraBold
-    position = -597, 363
+    position = 0, 400
     halign = center
     valign = center
 }
 
 # Degrees
-label {
-    monitor =
-    text = cmd[update:18000000] echo "<b>Feels like<big> $(ansiweather -l Paris -a false | awk '{print $4}')° C </big></b>"
-    color = $dark_primary
-    font_size = 12
-    shadow_passes = 3
-    shadow_size = 1
-    font_family = JetBrains Mono Nerd, SF Pro Display Bold
-    position = 605, 733
-    halign = center
-    valign = bottom
-}
+#label {
+#    monitor =
+#    text = cmd[update:18000000] echo "<b>Feels like<big> $(~/.config/waybar/ansiweather -l Paris -a false | awk '{print $4}')° C </big></b>"
+#    color = $dark_primary
+#    font_size = 32
+#    shadow_passes = 3
+#    shadow_size = 1
+#    font_family = JetBrains Mono Nerd, SF Pro Display Bold
+#    position = 0, 500
+#    halign = center
+#    valign = center
+#}
 
 # NAME
 label {
@@ -103,7 +105,7 @@ label {
     text = 
     color = $dark_primary
     outline_thickness = 0
-      shadow_passes = 3
+    shadow_passes = 3
     shadow_size = 1
     dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
