--- a/config/material-you/colors.conf
+++ b/config/material-you/colors.conf
@@ -23,10 +23,10 @@ $dark_on-tertiary-fixed = rgb(0a2007)
 $dark_on-tertiary-fixed-variant = rgb(354d2e)
 $dark_outline = rgb(9a8f80)
 $dark_outline-variant = rgb(4e4639)
-$dark_primary = rgb(edc06c)
+$dark_primary = rgb(fdc06c)
 $dark_primary-container = rgb(5e4200)
 $dark_primary-fixed = rgb(ffdea7)
-$dark_primary-fixed-dim = rgb(edc06c)
+$dark_primary-fixed-dim = rgb(fdc06c)
 $dark_scrim = rgb(000000)
 $dark_secondary = rgb(dac4a0)
 $dark_secondary-container = rgb(54452a)
@@ -72,7 +72,7 @@ $light_on-tertiary-fixed = rgb(0a2007)
 $light_on-tertiary-fixed-variant = rgb(354d2e)
 $light_outline = rgb(807667)
 $light_outline-variant = rgb(d1c5b4)
-$light_primary = rgb(7a590c)
+$light_primary = rgb(7f590c)
 $light_primary-container = rgb(ffdea7)
 $light_primary-fixed = rgb(ffdea7)
 $light_primary-fixed-dim = rgb(edc06c)
