--- a/config/waybar/config
+++ b/config/waybar/config
@@ -1,10 +1,12 @@
 [
 // FIRST BAR
 {
+    "name": "float",
     "layer": "top",
     "position": "left",
+    "reload_style_on_change": true,
     "spacing": 0,
-    "width": 42,
+    "width": 50,
      "modules-left": [
         "custom/logo",
         "sway/workspaces"
@@ -14,11 +16,32 @@
     ],
     "modules-right": [
         "tray",
-        "custom/microphone",
-        "custom/oss",
-        "custom/backlight",
+        "group/brightness",
+        "group/volume",
         "battery",
     ],
+   "group/brightness": {
+        "orientation": "inherit",
+        "drawer": {
+        "transition-duration": 500,
+        "transition-left-to-right": false
+        },
+        "modules": [
+            "backlight",
+            "backlight/slider"
+        ]
+    },
+   "group/volume": {
+        "orientation": "inherit",
+        "drawer": {
+        "transition-duration": 500,
+        "transition-left-to-right": false
+        },
+        "modules": [
+            "wireplumber",
+            "pulseaudio/slider"
+        ]
+    },
     "wlr/taskbar": {
         "format": "{icon}",
         "on-click": "activate",
@@ -56,7 +79,38 @@
         "spacing": 10
     },
 
-    "pulseaudio": {
+    "backlight": {
+        "device": "intel_backlight",
+        "format": " {icon}\n{percent}%",
+        "format-icons": [
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            ""
+        ]
+    },
+    "backlight/slider": {
+      "min": 0,
+      "max": 100,
+      "orientation": "vertical"
+    },
+    "pulseaudio/slider": {
+      "min": 0,
+      "max": 140,
+      "orientation": "vertical"
+    },
+    "wireplumber": {
     	"format": "{icon}\n{volume}%",
     	"format-bluetooth": "{}\n{volume}%",
     	"format-muted": "",
@@ -86,36 +140,14 @@
         "on-scroll-up": "mixer rec.volume=+0.01",
         "on-scroll-down": "mixer rec.volume=-0.01"
     },
-    "custom/oss":
-    {
-        "interval": 1,
-        "justify": "center",
-        "format": "\n{}",
-        "exec": "mixer vol.volume | tail -c 5",
-        "exec-on-event": true,
-        "on-click": "mixer vol.volume=0",
-        "on-click-right": "mixer vol.mute=1",
-        "on-scroll-up": "mixer vol.volume=+0.01",
-        "on-scroll-down": "mixer vol.volume=-0.01"
-    },
-    "custom/backlight": {
-        "interval": 2,  
-        "justify": "center",
-        "format": "󰃟\n{}%",
-        "exec": "backlight | awk '{print $2}'",
-        "on-scroll-up": "backlight incr 5",
-        "on-scroll-down": "backlight decr 5"
-    },
     "clock": {
         "tooltip-format": "{calendar}",
-        "format": "{:\n%H\n%M}"
+        "format": "\n{:%H\n%M}"
     },
     "custom/logo": {
-        "format": "",
+        "format": "",
+        "exec": "uname -a",
         "tooltip-format": "{}",
-        "exec": "freebsd-version",
-        "on-click": "rofi -show drun",
-        "on-click-right": "kitty sudo pkg update && sudo pkg upgrade"
     },
     "battery": {
         "interval": 3,
@@ -150,7 +182,7 @@
         "interval": 5,
         "states": {
             "warning": 20,
-            "critical": 10
+            "critical": 10,
         },
         "tooltip": false
     },
@@ -174,6 +206,7 @@
         "battery"
     ],
     "modules-center": [
+        "network",
         "custom/mail",
         "clock",
     ],
@@ -220,16 +253,10 @@
         "format": "  {:%a, %d %b %Y}",
     },
     "network": {
-        "format-wifi" : "{icon}",
         "format-icons": ["󰤯","󰤟","󰤢","󰤥","󰤨"],
-        "format-ethernet": "󰀂",
-	    "format-alt" : "󱛇",
         "format-disconnected" : "󰖪",
-	    "tooltip-format-wifi": "{icon} {essid}⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
-        "tooltip-format-ethernet": "󰀂  {ifname}⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
-	    "tooltip-format-disconnected": "Disconnected",
-	    "on-click": "~/.config/rofi/wifi/wifi.sh &",
-        "on-click-right": "~/.config/rofi/wifi/wifinew.sh &",
+	    "format-wifi": "{icon} {essid} ⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
+        "format-ethernet": "󰀂  {ifname} ⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
 	    "interval": 5,
 	    "nospacing": 1,
     },
