--- a/config/tofi/config
+++ b/config/tofi/config
@@ -1,14 +1,14 @@
 font = Caskaydia Cove Nerd Font
-corner-radius = 0
-outline-color = #D3D1B9
-outline-width = 0
-border-color = #E3E1C9
+corner-radius = 20
+outline-color = #D3D1B90A
+outline-width = 
+border-color = #00000000
 border-width = 0
-background-color = #000000
-text-color = #0A3
-selection-color = #0F6
+background-color = #111111DA
+text-color = #0A3F
+selection-color = #0F6F
 prompt-text = "~> "
-num-results = 100
+num-results = 16
 hide-cursor = false
 # width = 640
 # height = 480
