--- a/config/tofi/config
+++ b/config/tofi/config
@@ -5,8 +5,8 @@ outline-width =
 border-color = #00000000
 border-width = 0
 background-color = #111111DA
-text-color = #0A3F
-selection-color = #0F6F
+text-color = #ba8F
+selection-color = #fa8F
 prompt-text = "~> "
 num-results = 16
 hide-cursor = false
