--- a/config/sway/config
+++ b/config/sway/config
@@ -101,6 +101,7 @@ bindsym $mod+Control+l exec hyprlock
 for_window [app_id="Alacritty"] floating enable 
 for_window [app_id="pavucontrol"] floating enable 
 for_window [app_id="kdeconnect*"] floating enable 
+for_window [app_id="nm-*"] floating enable 
 
 # Drag floating windows by holding down $mod and left mouse button.
 # Resize them with right mouse button + $mod.
