--- a/config/waybar/config
+++ b/config/waybar/config
@@ -4,23 +4,21 @@
   "position": "top", // Waybar position (top|bottom|left|right)
   "height": 20,
   "margin": "0 0 0 0",
-  "width": 1500, // Waybar width
+  "width": 1250, // Waybar width
   // Choose the order of the modules idle_inhibitor
   "modules-left": [
     "sway/workspaces",
     // "custom/swap",
     "tray",
     "sway/mode",
-    "group/mpd"
+    "group/mpd",
+    "custom/mail"
   ],
   "modules-center": ["clock"],
   "modules-right": [
-    "network",
-    "cpu",
-    //"memory",
-    "backlight",
     "pulseaudio",
-    "battery",
+    "backlight",
+    "group/stats",
   ],
 
   "sway/workspaces": {
@@ -43,6 +41,27 @@
     }
   },
 
+  "custom/mail": {
+    "interval": 15,
+    "format": "{}",
+    "exec": "~/.config/waybar/scripts/check_mail.sh",
+    "on-click": "alacritty --command neomutt; ~/.config/waybar/scripts/check_mail.sh"
+  },
+
+  "group/stats": {
+      "drawer": {
+        "transition-duration": 500,
+        "transition-left-to-right": false
+      },
+      "modules": [
+        "battery",
+        "cpu",
+        "memory",
+        "network",
+      ],
+      "orientation": "horizontal"
+  },
+
   "group/mpd": {
       "drawer": {
         "transition-duration": 500,
@@ -52,7 +71,6 @@
         "mpd#2",
         "mpd#3",
         "mpd#4",
-        "mpd#1",
       ],
       "orientation": "horizontal"
     },
@@ -63,8 +81,6 @@
     "format": " {elapsedTime:%M:%S}",
     "format-disconnected": "⚠  Disconnected",
     "format-stopped": " Not Playing",
-    "on-click": "exec alacritty --command ncmpcpp",
-    "on-click-right": "exec ~/.config/sway/scripts/music_init.sh",
     "state-icons": {
       "playing": "",
       "paused": ""
@@ -112,7 +128,8 @@
   "custom/cava-internal": {
     "exec": "sh ~/.config/waybar/scripts/Cava.sh",
     "format": "{}",
-    "on-click": "exec alacritty --command ncmpcpp -s visualizer",
+    "on-click": "exec alacritty --command ncmpcpp",
+    "on-click-right": "exec ~/.config/sway/scripts/music_init.sh",
     "tooltip": false,
     "layer": "below",
     "output": "all"
@@ -157,40 +174,10 @@
       "on-scroll-up": "shift_up",
       "on-scroll-down": "shift_down"
     },
-    "format": "  {:%a %d %b   %H:%M}", //12 hour format
-    // "format": " {:%d %m %Y  %H:%M}",	//24 hour format
-    "format-alt": "  {:%d/%m/%Y  %H:%M:%S}",
-    // //"timezones": [ "Kolkata" ],
-    // //"max-length": 200
+    "format": "  {:%a %d %b |   %H:%M}",
+    "format-alt": "  {:%d/%m/%Y |   %H:%M:%S}",
     "interval": 1
   },
-  // "clock": {
-  //     "format": "  {:%H:%M:%S}",
-  //     "format-alt": "  {:%A, %B %d, %Y (%R)}",
-  //     "tooltip-format": "<tt><small>{calendar}</small></tt>",
-  //     "calendar": {
-  //         "mode"          : "month",
-  //         "mode-mon-col"  : 3,
-  //         "weeks-pos"     : "right",
-  //         "on-scroll"     : 1,
-  //         "on-click-right": "mode",
-  //         "format": {
-  //             "months":     "<span color='#ffead3'><b>{}</b></span>",
-  //             "days":       "<span color='#ecc6d9'><b>{}</b></span>",
-  //             "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
-  //             "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
-  //             "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
-  //         }
-  //     },
-  //     "actions": {
-  //         "on-click-right": "mode",
-  //         "on-click-forward": "tz_up",
-  //         "on-click-backward": "tz_down",
-  //         "on-scroll-up": "shift_up",
-  //         "on-scroll-down": "shift_down"
-  //     },
-  //     "interval": 1
-  // },
   "cpu": {
     "format": "  {icon0}{icon1}{icon2}{icon3} {usage: >3}%",
     "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"],
@@ -288,12 +275,6 @@
   "modules-center": [
     "custom/mail"
   ],
-  "custom/mail": {
-    "interval": 15,
-    "format": "{}",
-    "exec": "~/.config/waybar/scripts/check_mail.sh",
-    "on-click": "alacritty --command neomutt; ~/.config/waybar/scripts/check_mail.sh"
-  },
 
 }
 
