--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -1,23 +1,17 @@
-monitor = ,preferred,auto,2
-source = ~/.config/material-you/colors.conf
-
 # BACKGROUND
 background {
-    monitor = 
+    monitor =
+    # path = ~/.config/hypr/hyprlock.png
     path = screenshot
-    blur_size = 4
-    blur_passes = 3 # 0 disables blurring
-    noise = 0.0117
-    contrast = 1.8000 # Vibrant!!!
-    brightness = 0.8000
-    vibrancy = 0.2100
+    blur_passes = 2
+    contrast = 0.8916
+    brightness = 0.8172
+    vibrancy = 0.1696
     vibrancy_darkness = 0.0
 }
 
-
 # GENERAL
 general {
-    monitor = ,preferred,auto,2
     no_fade_in = false
     grace = 0
     disable_loading_bar = false
@@ -26,110 +20,60 @@ general {
 # INPUT FIELD
 input-field {
     monitor =
-    size = 400, 50
+    size = 250, 60
     outline_thickness = 2
-    dots_size = 0.5 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = true
-    inner_color = rgba(0, 0, 0, 0.0)
-    outer_color =  rgba(255, 255, 255, .0)
-    font_color = $dark_primary
-    fade_on_empty = false
-    font_family = SF Pro Display Bold
-    placeholder_text = <i><span foreground="##ffffff99"></span></i>
-    hide_input = false
-    position = 0, -340
-    halign = center
-    valign = center
-}
-
-# Hour-Time
-label {
-    monitor =
-    text = cmd[update:1000] echo "$(date +"%I")"
-    color =  $dark_primary
-    shadow_passes = 3
-    shadow_size = 2
-    font_size = 200
-    font_family = AlfaSlabOne 
-    position = 0, 200
-    halign = center
-    valign = center
-}
-
-# Minute-Time
-label {
-    monitor =
-    text = cmd[update:1000] echo "$(date +"%M")"
-    color = $dark_primary
-    font_size = 200
-    font_family = AlfaSlabOne
-      shadow_passes = 3
-    shadow_size = 2
-    position = 0, -40
-    halign = center
-    valign = center
-}
-
-# Day-Date-Month
-label {
-    monitor =
-    text = cmd[update:1000] echo "$(date +"%d %b %A")"
-    color = $light_primary
-       shadow_passes = 3
-    shadow_size = 1
-    font_size = 48
-    font_family = JetBrains Mono Nerd Font Mono ExtraBold
-    position = 0, 400
-    halign = center
-    valign = center
-}
-
-# Degrees
-#label {
-#    monitor =
-#    text = cmd[update:18000000] echo "<b>Feels like<big> $(~/.config/waybar/ansiweather -l Paris -a false | awk '{print $4}')° C </big></b>"
-#    color = $dark_primary
-#    font_size = 32
-#    shadow_passes = 3
-#    shadow_size = 1
-#    font_family = JetBrains Mono Nerd, SF Pro Display Bold
-#    position = 0, 500
-#    halign = center
-#    valign = center
-#}
-
-# NAME
-label {
-    monitor =
-    text = 
-    color = $dark_primary
-    outline_thickness = 0
-    shadow_passes = 3
-    shadow_size = 1
     dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
-    font_size = 20
+    outer_color = rgba(0, 0, 0, 0)
+    inner_color = rgba(100, 114, 125, 0.4)
+    font_color = rgb(200, 200, 200)
+    fade_on_empty = false
     font_family = SF Pro Display Bold
-    position = 0, -110
+    placeholder_text = <i><span foreground="##ffffff99">Enter Pass</span></i>
+    hide_input = false
+    position = 0, -225
     halign = center
     valign = center
 }
 
-image {
+# Time
+label {
     monitor =
-    path = ~/.config/eww/pfp.png
-    size = 80 # lesser side if not 1:1 ratio
-    rounding = -1 # negative values mean circle
-    border_size = 0
-      shadow_passes = 3
-    shadow_size = 3
-    border_color = rgb(221, 221, 221)
-    rotate = 0 # degrees, counter-clockwise
-    reload_time = -1 # seconds between reloading, 0 to reload with SIGUSR2
-#    reload_cmd =  # command to get new path. if empty, old path will be used. don't run "follow" commands like tail -F
-    position = 0, -250
+    text = cmd[update:1000] echo "<span>$(date +"%H:%M")</span>"
+    color = rgba(216, 222, 233, 0.70)
+    font_size = 180
+    font_family = SF Pro Display Bold
+    position = 0, 240
     halign = center
     valign = center
 }
+
+# Day-Month-Date
+label {
+    monitor =
+    text = cmd[update:1000] echo "$(date +"%A, %d %B")"
+    color = rgba(216, 222, 233, 0.70)
+    font_size = 30
+    font_family = SF Pro Display Bold
+    position = 0, 105
+    halign = center
+    valign = center
+}
+
+# Profie-Photo
+image {
+    monitor =
+    path = 
+    border_color = 0xffdddddd
+    border_size = 0
+    size = 120
+    rounding = -1
+    rotate = 0
+    reload_time = -1
+    reload_cmd = 
+    position = 0, -20
+    halign = center
+    valign = center
+}
+
